[package]
name = "rust-binance-api"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lapin = "2.5"
tokio-amqp = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
anyhow = "1"
prometheus = "0.13"
lazy_static = "1"
